[gd_scene load_steps=2 format=3 uid="uid://bp8nf5lei8btn"]

[ext_resource type="Script" path="res://scenes/Clickable.gd" id="1_p6jhq"]

[node name="Clickable" type="Area2D"]
script = ExtResource("1_p6jhq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
